IE fix for Cells not visible  when table is inserted

--- a/Website/Frontend/Config/VisualEditor/Styles/core.css
+++ b/Website/Frontend/Config/VisualEditor/Styles/core.css
@@ -35,7 +35,7 @@ h1,
 table {
 	margin: 0 0 20px 0;
 }
-td {
+table tr td {
 	padding: 2px 5px 3px 5px;
 	vertical-align: top;
     min-width:8px;
